# Rust-Yuyuko

./: .gitignore  AUDIT.md  Cargo.toml
src/: main.rs
src/api/: anilist.rs  ayumu.rs  firebase.rs  jimaku.rs  llm.rs  mod.rs  ocr.rs  vndb.rs  youtube.rs
src/commands/: afk.rs  ayumu_exam.rs  config.rs  export.rs  help.rs  immersion.rs  immersion_helpers.rs  leaderboard.rs  log.rs  mod.rs  novel.rs  prompt.rs  react.rs  register.rs  role_rank.rs  stat.rs  subs.rs
src/features/: afk_handler.rs  ayumi.rs  custom_prompt.rs  mod.rs  novel_recommender.rs  role_rank.rs
src/models/: guild.rs  immersion_log.rs  mod.rs  stats.rs  user.rs
src/utils/: ayumi_prompt.rs  config.rs  emojis.rs  formatters.rs  mod.rs  points.rs  streak.rs  visualizations.rs
